--- a/LBSP-SOA/LBSP-SOA.csproj
+++ b/LBSP-SOA/LBSP-SOA.csproj
@@ -30,7 +30,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EventStore.ClientAPI, Version=3.9.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\EventStore.Client.3.9.0\lib\net40\EventStore.ClientAPI.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,14 +50,24 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DomainBehavior.cs" />
+    <Compile Include="EventStore.cs" />
+    <Compile Include="IEventStore.cs" />
+    <Compile Include="IRouter.cs" />
     <Compile Include="ITrigger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestHandler.cs" />
+    <Compile Include="Service.cs" />
+    <Compile Include="ServiceIO.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CodeStructures\CodeStructures.csproj">
       <Project>{1A5B7952-3781-4ECC-9443-5F32A68DA82D}</Project>
       <Name>CodeStructures</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
