--- a/CodeStructures/CodeStructures.csproj
+++ b/CodeStructures/CodeStructures.csproj
@@ -42,7 +42,9 @@
   <ItemGroup>
     <Compile Include="Guard.cs" />
     <Compile Include="IEnumerableExtensions.cs" />
+    <Compile Include="IMaybe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Safely.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
