add creating a new parking host to registration context

--- a/Registration.UnitTesting/Registration.UnitTesting.csproj
+++ b/Registration.UnitTesting/Registration.UnitTesting.csproj
@@ -55,6 +55,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CreateParkingHostMust.cs" />
     <Compile Include="CreateParkingGuestMust.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
