--- a/Gateway/Gateway.csproj
+++ b/Gateway/Gateway.csproj
@@ -134,6 +134,10 @@
       <Project>{1A5B7952-3781-4ECC-9443-5F32A68DA82D}</Project>
       <Name>CodeStructures</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Gateway.Interface\Gateway.Interface.csproj">
+      <Project>{82a1903b-0015-4ed4-80a1-de90c3854c13}</Project>
+      <Name>Gateway.Interface</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LBSP-SOA\LBSP-SOA.csproj">
       <Project>{62159671-3A0D-4516-B326-55B1193950E1}</Project>
       <Name>LBSP-SOA</Name>
