--- a/Query.Domain/Query.Domain.csproj
+++ b/Query.Domain/Query.Domain.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B920E82C-47E6-49A8-90DC-2AA75D166BFA}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{DD26019D-3591-4C0E-AF86-9FEA6592D4D8}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Registration.Service</RootNamespace>
-    <AssemblyName>Registration.Service</AssemblyName>
+    <RootNamespace>Query.Domain</RootNamespace>
+    <AssemblyName>Query.Domain</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -29,12 +29,17 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject>
-    </StartupObject>
-  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -44,27 +49,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="QueryWorld.cs" />
+    <Compile Include="WillMaterialiseParkingHost.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Routes.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Gateway.Interface\Gateway.Interface.csproj">
-      <Project>{82a1903b-0015-4ed4-80a1-de90c3854c13}</Project>
-      <Name>Gateway.Interface</Name>
+    <ProjectReference Include="..\CodeStructures\CodeStructures.csproj">
+      <Project>{1A5B7952-3781-4ECC-9443-5F32A68DA82D}</Project>
+      <Name>CodeStructures</Name>
     </ProjectReference>
     <ProjectReference Include="..\LBSP-SOA\LBSP-SOA.csproj">
       <Project>{62159671-3A0D-4516-B326-55B1193950E1}</Project>
       <Name>LBSP-SOA</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Registration.Domain\Registration.Domain.csproj">
-      <Project>{4C3A7E22-8D59-4313-A2B4-DAE8DD3E7E1A}</Project>
-      <Name>Registration.Domain</Name>
+    <ProjectReference Include="..\Query.Interface\Query.Interface.csproj">
+      <Project>{18EDDA4F-E9A6-464A-98C9-0051DA144879}</Project>
+      <Name>Query.Interface</Name>
     </ProjectReference>
     <ProjectReference Include="..\Registration.Interface\Registration.Interface.csproj">
       <Project>{09CEF03E-21D0-40F2-AB2E-8E08C6E0E016}</Project>
       <Name>Registration.Interface</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
