--- a/Query.Service/Query.Service.csproj
+++ b/Query.Service/Query.Service.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Routes.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -71,6 +72,10 @@
     <ProjectReference Include="..\LBSP-SOA\LBSP-SOA.csproj">
       <Project>{62159671-3a0d-4516-b326-55b1193950e1}</Project>
       <Name>LBSP-SOA</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Query.Domain\Query.Domain.csproj">
+      <Project>{DD26019D-3591-4C0E-AF86-9FEA6592D4D8}</Project>
+      <Name>Query.Domain</Name>
     </ProjectReference>
     <ProjectReference Include="..\Query.Interface\Query.Interface.csproj">
       <Project>{18edda4f-e9a6-464a-98c9-0051da144879}</Project>
