Changed connection string to SQL Express

--- a/Query.Service/App.config
+++ b/Query.Service/App.config
@@ -6,7 +6,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   
   <connectionStrings>
-    <add name="AppDbContext" providerName="System.Data.SqlClient" connectionString="Server=.;Initial Catalog=ParkwellQueryDB;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" />
+    <add name="AppDbContext" providerName="System.Data.SqlClient" connectionString="Server=.\SQLExpress;Initial Catalog=ParkwellQueryDB;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" />
   </connectionStrings>  
   
   <startup>
