--- a/Gateway/packages.config
+++ b/Gateway/packages.config
@@ -12,4 +12,7 @@
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
+  <package id="System.Reactive.Core" version="3.0.0" targetFramework="net46" />
+  <package id="System.Reactive.Interfaces" version="3.0.0" targetFramework="net46" />
+  <package id="System.Reactive.Linq" version="3.0.0" targetFramework="net46" />
 </packages>
