--- a/LBSP-SOA/packages.config
+++ b/LBSP-SOA/packages.config
@@ -2,4 +2,7 @@
 <packages>
   <package id="EventStore.Client" version="3.9.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
+  <package id="System.Reactive.Core" version="3.0.0" targetFramework="net46" />
+  <package id="System.Reactive.Interfaces" version="3.0.0" targetFramework="net46" />
+  <package id="System.Reactive.Linq" version="3.0.0" targetFramework="net46" />
 </packages>
