--- a/LBSP-SOA/LBSP-SOA.csproj
+++ b/LBSP-SOA/LBSP-SOA.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestHandler.cs" />
     <Compile Include="Service.cs" />
+    <Compile Include="ServiceBootstrap.cs" />
     <Compile Include="ServiceIO.cs" />
   </ItemGroup>
   <ItemGroup>
