--- a/Gateway/Gateway.csproj
+++ b/Gateway/Gateway.csproj
@@ -130,7 +130,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\GetAllHostsController.cs" />
-    <Compile Include="Controllers\CreateHostController.cs" />
+    <Compile Include="Controllers\RegisterParkingHostController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
