--- a/Listing.Domain/Listing.Domain.csproj
+++ b/Listing.Domain/Listing.Domain.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="WhenParkingHostCreated.cs" />
+    <Compile Include="WhenParkingHostRegistered.cs" />
     <Compile Include="ListingWorld.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
