--- a/LBSP-SOA/LBSP-SOA.csproj
+++ b/LBSP-SOA/LBSP-SOA.csproj
@@ -64,7 +64,7 @@
     <Compile Include="DomainBehavior.cs" />
     <Compile Include="EventStore.cs" />
     <Compile Include="IEventStore.cs" />
-    <Compile Include="IRouter.cs" />
+    <Compile Include="Router.cs" />
     <Compile Include="ITrigger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestHandler.cs" />
