--- a/Booking.Service/Booking.Service.csproj
+++ b/Booking.Service/Booking.Service.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Booking.Service</RootNamespace>
     <AssemblyName>Booking.Service</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -48,6 +49,24 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Booking.Domain\Booking.Domain.csproj">
+      <Project>{3a20ed60-e06d-43cf-8f4f-892f4f3613cb}</Project>
+      <Name>Booking.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Booking.Interface\Booking.Interface.csproj">
+      <Project>{ea7019a4-1561-4ff9-9f74-687c6b2195d2}</Project>
+      <Name>Booking.Interface</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Gateway.Interface\Gateway.Interface.csproj">
+      <Project>{82a1903b-0015-4ed4-80a1-de90c3854c13}</Project>
+      <Name>Gateway.Interface</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LBSP-SOA\LBSP-SOA.csproj">
+      <Project>{62159671-3a0d-4516-b326-55b1193950e1}</Project>
+      <Name>LBSP-SOA</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
